--- a/docs/20_role/40_data_steward.mdx
+++ b/docs/20_role/40_data_steward.mdx
@@ -24,7 +24,7 @@ Data stewards may work directly at an institute, but, in Germany, many are part 
 
 To efficiently manage data and maintain an overview, data stewards can use a [Data Management Plan](/docs/dmp) as a supporting tool.
 
-Recently, a [BMBF](https://www.bmbf.de/bmbf/de/home/home_node.html)-funded project titled [DataStew](https://www.ub.uni-koeln.de/forschen_publizieren/forschen/forschungsdaten_managen/datastew/index_ger.html) has been analyzing the concept of data stewardship in the German academic landscape and identifying various stakeholder requirements to be able to provide recommendations for education and training for the role. Similar to the above-mentioned Dutch project, the first [results](https://doi.org/10.5281/zenodo.7327371) here show the multi-faceted task areas assigned to data stewards. From consultating on general RDM services, development or expansion of IT-tools and infrastructure for RDM in research, discipline-specific consulting, conducting their own data-focused research for specific disciplines, to occupying coordinative roles, one data steward position is rarely like the next.
+Recently, a [BMBF](https://www.bmbf.de/bmbf/de/home/home_node.html)-funded project titled [DataStew](https://doi.org/10.4126/FRL01-006441397) has been analyzing the concept of data stewardship in the German academic landscape and identifying various stakeholder requirements to be able to provide recommendations for education and training for the role. Similar to the above-mentioned Dutch project, the first [results](https://doi.org/10.5281/zenodo.7327371) here show the multi-faceted task areas assigned to data stewards. From consultating on general RDM services, development or expansion of IT-tools and infrastructure for RDM in research, discipline-specific consulting, conducting their own data-focused research for specific disciplines, to occupying coordinative roles, one data steward position is rarely like the next.
 
 ### Data Stewards in Chemistry
 
