--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -41,7 +41,7 @@ To ease the selection of a suitable research data repository for chemistry resea
 
 ## Sources and further information
 
--   [Repository Platforms for Research Data IG](https://www.rd-alliance.org/groups/repository-platforms-research-data.html)
+-   [Repository Platforms for Research Data IG](https://www.rd-alliance.org/groups/repository-platforms-research-data/activity/)
 -   [FAIRsFAIR Repository Support Series: Using registries to improve the visibility of your repository service](https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository)
 -   [The Repository Chemotion: infrastructure for sustainable research in chemistry](https://doi.org/10.1002/anie.202007702)
 -   [Chemotion ELN: an open source electronic lab notebook for chemists in academia](https://doi.org/10.1186/s13321-017-0240-0)
