--- a/docs/50_data_publication/20_choose_repository/50_nmrxiv.mdx
+++ b/docs/50_data_publication/20_choose_repository/50_nmrxiv.mdx
@@ -44,7 +44,7 @@ More details about the platform architecture and related topics – [here](https
 
 Enable the FAIR sharing of raw NMR data to enhance the quality of chemical research and dissemination. Also, to develop non-prescriptivist curation and analysis standards for data and metadata. Build standards with input and contributions from the community and make them compatible with existing and potential newly developed formats and approaches.
 
-More details about the data standards and related topics – [here](https://docs.nmrxiv.org/category/data.html)
+More details about the data standards and related topics – here: [project](https://docs.nmrxiv.org/submission-guides/data-model/project.html), [sample](https://docs.nmrxiv.org/submission-guides/data-model/sample.html), [spectra](https://docs.nmrxiv.org/submission-guides/data-model/spectra.html)
 
 ### Workshops and Training
 
