--- a/docs/60_topics/63_data_description_annotation/20_ontology.mdx
+++ b/docs/60_topics/63_data_description_annotation/20_ontology.mdx
@@ -53,30 +53,30 @@ This tabular overview lists the suitable ontologies with regard to:
 -   the possibility of reusing them in a modular way (whereas a BFO alignment and OBO compatibility indicates an increased possibility),
 -   and, their use in known applications.
 
-| Ontology                                                                       | Domain                          | Licence                                                                          | Modularity                                                 | Used in                                                                                                    |
-| ------------------------------------------------------------------------------ | ------------------------------- | -------------------------------------------------------------------------------- | ---------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------- |
-| [ChEBI](https://www.ebi.ac.uk/ols/ontologies/chebi)                            | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | YMDB, HMDB, PubChem, MassBank, KNApSAcK, UM-BBD, GMD, SMID-DB                                              |
-| [CHIRO](https://terminology.nfdi4chem.de/ts/ontologies/chiro)                  | chemistry                       | [CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/)                    | BFO & OBO based                                            | unknown                                                                                                    |
-| [ChemOnt](http://classyfire.wishartlab.com/downloads)                          | chemistry                       | custom OA licence                                                                | subsumable under BFO's _material entity_                   | YMDB, HMDB, T3DB, ECMDB, DrugBank,PubChem, ChEBI, LIPID MAPS, MoNA                                         |
-| [CHEMINF](https://terminology.nfdi4chem.de/ts/ontologies/cheminf)              | chemistry                       | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/)                        | BFO & OBO based                                            | PubChem, Open PHACTS                                                                                       |
-| [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)                    | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | Chemotion, Allotrope™                                                                                      |
-| [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)                      | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | RXNO                                                                                                       |
-| [RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno)                    | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | NameRXN, Wikipedia, Chemotion                                                                              |
-| [OntoKin](http://www.theworldavatar.com/kb/ontokin/ontokin.owl)                | chemistry                       | unknown                                                                          | OntoCAPE upper level & modules                             | J-Park Simulator                                                                                           |
-| [AFO](https://www.ebi.ac.uk/ols/ontologies/afo)                                | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO classes & relations, many AFO- some custom OBO-modules | Allotrope™                                                                                                 |
-| [PROCO](https://raw.githubusercontent.com/proco-ontology/PROCO/main/proco.owl) | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO/AFO & OBO based                                        | Allotrope™                                                                                                 |
-| [MS](https://terminology.nfdi4chem.de/ontologies/ms)                           | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO mapping possible                                 | mzML                                                                                                       |
-| [nmrCV](https://terminology.nfdi4chem.de/ontologies/nmrcv)                     | chemistry                       | [Public Domain Mark 1.0](https://creativecommons.org/publicdomain/mark/1.0/deed) | BFO & OBO mapping possible                                 | MetaboLights, HMDB                                                                                         |
-| [BFO](https://terminology.nfdi4chem.de/ontologies/bfo)                         | upper level (classes only)      | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | OBO backbone                                               | >300 ontologies & >50 organizations, PubChem                                                               |
-| [RO](https://terminology.nfdi4chem.de/ts/ontologies/ro)                        | upper level (relations)         | CC0 1.0                                                                          | BFO & OBO based                                            | Monarch Initiative, OBO Foundry, Gene Ontology, PubChem                                                    |
-| [IAO](https://terminology.nfdi4chem.de/ts/ontologies/iao)                      | information artefacts           | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | OBO Foundry, Allotrope™, PubChem, ISA tools                                                                |
-| [OBI](https://terminology.nfdi4chem.de/ts/ontologies/obi)                      | biomedicine                     | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | OBO Foundry, Allotrope™, PubChem                                                                           |
-| [UO](https://terminology.nfdi4chem.de/ts/ontologies/uo)                        | scientific units                | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | OBO Foundry, UOM, PubChem                                                                                  |
-| [QUDT](http://www.qudt.org/pages/QUDToverviewPage.html)                        | scientific units                | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based mapping possible                           | openPHACTS                                                                                                 |
-| [PATO](https://terminology.nfdi4chem.de/ts/ontologies/pato)                    | phenotypic & physical qualities | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/)                        | BFO & OBO based                                            | OBO Foundry, Allotrope™                                                                                    |
-| [SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio)                      | upper level                     | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO alignment                                              | PubChemRDF, Bio2RDF, SADI Semantic Web Services, DisGeNET, EBI's Gene Expression Atlas, Graph4Code project |
-| [EDAM](https://terminology.nfdi4chem.de/ts/ontologies/edam)                    | life-sciences & data management | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO mapping possible                                 | EMBOSS, Bio-jETI                                                                                           |
-| [OntoCAPE](http://www.theworldavatar.com/ontology/ontocape/)                   | upper level & engineering       | [GNU GPLv2](https://www.gnu.org/licenses/old-licenses/gpl-2.0)                   | provides upper level concepts                              | J-Park Simulator                                                                                           |
+| Ontology                                                                | Domain                          | Licence                                                                          | Modularity                                                 | Used in                                                                                                    |
+| ----------------------------------------------------------------------- | ------------------------------- | -------------------------------------------------------------------------------- | ---------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------- |
+| [ChEBI](https://www.ebi.ac.uk/ols/ontologies/chebi)                     | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | YMDB, HMDB, PubChem, MassBank, KNApSAcK, UM-BBD, GMD, SMID-DB                                              |
+| [CHIRO](https://terminology.nfdi4chem.de/ts/ontologies/chiro)           | chemistry                       | [CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/)                    | BFO & OBO based                                            | unknown                                                                                                    |
+| [ChemOnt](http://classyfire.wishartlab.com/downloads)                   | chemistry                       | custom OA licence                                                                | subsumable under BFO's _material entity_                   | YMDB, HMDB, T3DB, ECMDB, DrugBank,PubChem, ChEBI, LIPID MAPS, MoNA                                         |
+| [CHEMINF](https://terminology.nfdi4chem.de/ts/ontologies/cheminf)       | chemistry                       | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/)                        | BFO & OBO based                                            | PubChem, Open PHACTS                                                                                       |
+| [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)             | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | Chemotion, Allotrope™                                                                                      |
+| [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)               | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | RXNO                                                                                                       |
+| [RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno)             | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | NameRXN, Wikipedia, Chemotion                                                                              |
+| [OntoKin](http://www.theworldavatar.com/ontology/ontokin/OntoKin.owl)   | chemistry                       | [MIT](https://github.com/TheWorldAvatar/ontology/blob/main/LICENSE.txt)          | OntoCAPE upper level & modules                             | J-Park Simulator                                                                                           |
+| [AFO](https://www.ebi.ac.uk/ols/ontologies/afo)                         | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO classes & relations, many AFO- some custom OBO-modules | Allotrope™                                                                                                 |
+| [PROCO](http://purl.obolibrary.org/obo/proco.owl)                       | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO/AFO & OBO based                                        | Allotrope™                                                                                                 |
+| [MS](https://terminology.nfdi4chem.de/ontologies/ms)                    | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO mapping possible                                 | mzML                                                                                                       |
+| [nmrCV](https://terminology.nfdi4chem.de/ontologies/nmrcv)              | chemistry                       | [Public Domain Mark 1.0](https://creativecommons.org/publicdomain/mark/1.0/deed) | BFO & OBO mapping possible                                 | MetaboLights, HMDB                                                                                         |
+| [BFO](https://terminology.nfdi4chem.de/ontologies/bfo)                  | upper level (classes only)      | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | OBO backbone                                               | >300 ontologies & >50 organizations, PubChem                                                               |
+| [RO](https://terminology.nfdi4chem.de/ts/ontologies/ro)                 | upper level (relations)         | CC0 1.0                                                                          | BFO & OBO based                                            | Monarch Initiative, OBO Foundry, Gene Ontology, PubChem                                                    |
+| [IAO](https://terminology.nfdi4chem.de/ts/ontologies/iao)               | information artefacts           | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | OBO Foundry, Allotrope™, PubChem, ISA tools                                                                |
+| [OBI](https://terminology.nfdi4chem.de/ts/ontologies/obi)               | biomedicine                     | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | OBO Foundry, Allotrope™, PubChem                                                                           |
+| [UO](https://terminology.nfdi4chem.de/ts/ontologies/uo)                 | scientific units                | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | OBO Foundry, UOM, PubChem                                                                                  |
+| [QUDT](http://www.qudt.org/pages/QUDToverviewPage.html)                 | scientific units                | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based mapping possible                           | openPHACTS                                                                                                 |
+| [PATO](https://terminology.nfdi4chem.de/ts/ontologies/pato)             | phenotypic & physical qualities | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/)                        | BFO & OBO based                                            | OBO Foundry, Allotrope™                                                                                    |
+| [SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio)               | upper level                     | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO alignment                                              | PubChemRDF, Bio2RDF, SADI Semantic Web Services, DisGeNET, EBI's Gene Expression Atlas, Graph4Code project |
+| [EDAM](https://terminology.nfdi4chem.de/ts/ontologies/edam)             | life-sciences & data management | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO mapping possible                                 | EMBOSS, Bio-jETI                                                                                           |
+| [OntoCAPE](http://www.theworldavatar.com/ontology/ontocape/OntoCAPE.owl)| upper level & engineering       | [GNU GPLv2](https://www.gnu.org/licenses/old-licenses/gpl-2.0)                   | provides upper level concepts                              | J-Park Simulator                                                                                           |
 
 ## General Scientific Ontologies
 
@@ -86,7 +86,7 @@ The second version of the **Basic Formal Ontology ([BFO 2.0](https://terminology
 
 ### SIO
 
-The **Semanticscience Integrated Ontology ([SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio))** is another upper level ontology that provides basic concepts (e.g. objects, information and processes) as well as their associated basic characteristics (e.g. functions, qualities and roles). It also contains many basic relations (e.g. _part of_, _has participant_ or _is about_) needed in the description of real objects, processes and information. It has been used in [Bio2RDF](http://bio2rdf.org/), [SADI Semantic Web Services](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3212890/), [DisGeNET](https://www.disgenet.org/rdf), [PubChemRDF](http://pubchem.ncbi.nlm.nih.gov/rdf/), [EBI's Gene Expression Atlas](https://www.ebi.ac.uk/gxa/home) and the [Graph4Code project](https://wala.github.io/graph4code/). To foster semantic interoperability, SIO is mapped to BFO and RO for important core classes and relations.
+The **Semanticscience Integrated Ontology ([SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio))** is another upper level ontology that provides basic concepts (e.g. objects, information and processes) as well as their associated basic characteristics (e.g. functions, qualities and roles). It also contains many basic relations (e.g. _part of_, _has participant_ or _is about_) needed in the description of real objects, processes and information. It has been used in [Bio2RDF](http://bio2rdf.org/), [SADI Semantic Web Services](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3212890/), [DisGeNET](https://www.disgenet.org/rdf), [PubChemRDF](https://pubchem.ncbi.nlm.nih.gov/docs/rdf), [EBI's Gene Expression Atlas](https://www.ebi.ac.uk/gxa/home) and the [Graph4Code project](https://wala.github.io/graph4code/). To foster semantic interoperability, SIO is mapped to BFO and RO for important core classes and relations.
 
 ### OntoCape
 
