fix: formatting issues

--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -16,7 +16,8 @@ A DMP answers the W-questions for documentation:
 In addition, the data management plan also addresses cross-cutting issues such as standards, ethics, responsibilities, and so on.
 
 :::info Goal:
-A structured, sustainable, and accessible approach to handling research data in line with the FAIR principles. :::
+A structured, sustainable, and accessible approach to handling research data in line with the FAIR principles.
+:::
 
 ## Why is a DMP important?
 
