fix: improve formatting

--- a/docs/30_data/30_data_organisation.mdx
+++ b/docs/30_data/30_data_organisation.mdx
@@ -29,8 +29,8 @@ Find a balanced set of elements: Too many make it difficult to grasp quickly, wh
 
 -   Order the elements from general to specific.
 -   Use meaningful abbreviations instead of long identifiers.
--   Use underscore (\_), hypen (-) or capitalized letters to separate elements in the name. Don’t use spaces or special characters: ?!& , _ % # ; _ ( ) @$ ^ ~ ‘ { } [ ] < >.
--   Use date format ISO8601: YYYYMMDD, and time if needed HHMMSS.
+-   Use underscore `_`, hyphen `-` or capitalized letters to separate elements in the name. Don’t use spaces or special characters: `?!&,_%#;_()@$^~‘{}[]<>`.
+-   Use date format ISO8601: `YYYYMMDD`, and time if needed `HHMMSS`.
 -   Include a version number if appropriate: minimum two digits (V02) and extend it, if needed for minor corrections (V02-03). The leading zeros, will ensure the files are sorted correctly.
 
 (by [RDMKit](https://rdmkit.elixir-europe.org/data_organisation.html#what-is-the-best-way-to-name-a-file))
@@ -48,12 +48,12 @@ Find a balanced set of elements: Too many make it difficult to grasp quickly, wh
 
 A good file name such as `20180211_ELI5_TEMP_BH01_RAW_03.csv` can easily be sorted by date and tells you:
 
-    date of file:                 11 February 2018
-    project acronym:              ELI5 = Explain like I’m 5 (years old)
-    measured value type:          TEMP = temperature values
-    measuring point / location:   BH01 = beehive # 01
-    type of data:                 RAW = raw data from measuring device
-    number of file containing data for that measurement series
+-   **date of file:** 11 February 2018
+-   **project acronym:** ELI5 = Explain like I'm 5 (years old)
+-   **measured value type:** TEMP = temperature values
+-   **measuring point / location:** BH01 = beehive # 01
+-   **type of data:** RAW = raw data from measuring device
+-   **number of file:** containing data for that measurement series
 
 If you need to rename a multiple files, take a look at:
 
