--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -19,6 +19,8 @@ article](docs/choose_eln) and test demo instances [here](https://demo.chemotion.
 
 Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/). The software is developed by several developers at different NFDI4Chem sites. The development started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
 
+{/* COMMENT Theo: I would put this paragraph at the end of the page, under "documentation". No one is interested in the how & why, they want to know what Chemotion can do for them. */}
+
 The Chemotion ELN has been specifically designed for chemists, taking into account the unique requirements of chemical laboratory work and documentation. It serves as a powerful digitalization tool for chemistry, aimed at creating seamless workflows throughout the [reseach data life cycle](docs/data_life_cycle). Achieving this vision is a collaborative effort involving continuous development, enhancement, and expansion of the ELN.
 
 To get an overview on how and with which tools Chemotion ELN supports you throughout the whole [reseach data life cycle](docs/data_life_cycle), have a look at the sections below and find out more detailed information about the single steps by clicking the link in the respective section.
