--- a/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
@@ -16,6 +16,6 @@ All structure editors directly convert the chemical structures into common chemi
 
 The Chemotion ELN directly pulls information from and links entries to databases such as [*PubChem*](https://pubchem.ncbi.nlm.nih.gov/) and [*CAS SciFinder*](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder). Thus, the planning of experiments is facilitated as all relevant information is automatically integrated into the ELN entries.
 
-Furthermore, the Chemotion ELN offers the possibility to link (text) publications directly to the ELN entries as references using [persistant identifiers](/docs/pid) such as DOIs. With this, the ELN allows you to directcly connect corresponding literature to experiments so you can cite and reference your own published work, experiments performed by others, or related publications.
+Furthermore, the Chemotion ELN offers the possibility to link (text) publications directly to the ELN entries as references using [persistant identifiers](/docs/pid) such as DOIs. With this, the ELN allows you to directly connect corresponding literature to experiments so you can cite and reference your own published work, experiments performed by others, or related publications.
 
 Oftentimes, projects or experiments require collaboration and exchange with other scientists. The Chemotion ELN allows for a simple sharing of ELN entries and corresponding data. Depending on the selected permission and detail levels, collaborators can access and edit shared data in the ELN. If you want to find out more about sharing in the Chemotion ELN and exemplarily sharing guidelines, have a look at this [publication](https://doi.org/10.1002/cmtd.202200026).
