--- a/docs/60_topics/61_identifiers/10_pid.mdx
+++ b/docs/60_topics/61_identifiers/10_pid.mdx
@@ -3,7 +3,7 @@ title: "Persistent Identifiers"
 slug: "/pid"
 ---
 
-import useBaseUrl from '@docusaurus/useBaseUrl';
+import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Persistent Identifiers (PIDs)
 
@@ -15,29 +15,56 @@ The main benefits of PIDs for chemistry researchers are increased findability, v
 
 ## DOIs
 
-<img align="left" src={useBaseUrl('/img/topics/DOI_logo.svg')} width="80" alt="DOI logo" vspace="15" hspace="20" />
+<img
+    align="left"
+    src={useBaseUrl("/img/topics/DOI_logo.svg")}
+    width="80"
+    alt="DOI logo"
+    vspace="15"
+    hspace="20"
+/>
 
 Digital Object Identifiers are PIDs for objects such as publications and datasets, but also physical objects. DOIs are resolved based on the [Handle System](https://www.handle.net/)to lead to the corresponding landing page and are assigned by members of the [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/). Most well-recognised [DOI registration agencies](https://www.doi.org/the-community/existing-registration-agencies/) include [CrossRef](https://www.crossref.org/) for publications and [DataCite](https://datacite.org/) focusing on [datasets](https://doi.org/10.1109/COINFO.2009.66).
 
-A DOI consists of a character string divided into two parts by a slash. The prefix always starts with a `10.` and identifies the registrant, who retrieves a DOI from a DOI registration agency. Every registrant has its own unique prefix. The suffix identifies a specific object registered by a registrant via a registration agency. 
+A DOI consists of a character string divided into two parts by a slash. The prefix always starts with a `10.` and identifies the registrant, who retrieves a DOI from a DOI registration agency. Every registrant has its own unique prefix. The suffix identifies a specific object registered by a registrant via a registration agency.
 
 DOIs are most frequently displayed as an URL such as `https://doi.org/10.1000/182` and include a resolver as HTTP proxy server to redirect to the linked object. DOIs are standardised by the [International Organisation for Standardisation](https://www.iso.org/) (ISO) in [ISO 26324](https://www.iso.org/standard/43506.html).
 
 <div class="text--center">
-    <img align="center" src={useBaseUrl("/img/topics/crossref-logo-landscape-200.svg")} width="200" alt="Crossref logo" hspace="50"  />
-    <img align="center" src={useBaseUrl("/img/topics/datacite.svg")} class="align-center" width="200" alt="DataCite logo" hspace="50" />
+    <img
+        align="center"
+        src={useBaseUrl("/img/topics/crossref-logo-landscape-200.svg")}
+        width="200"
+        alt="Crossref logo"
+        hspace="50"
+    />
+    <img
+        align="center"
+        src={useBaseUrl("/img/topics/datacite.svg")}
+        class="align-center"
+        width="200"
+        alt="DataCite logo"
+        hspace="50"
+    />
 </div>
 <br></br>
 
 :::danger Notice:
-Most importantly, domain-independent [metadata](/docs/metadata) also including [provenance information](/docs/provenance) is attached to the DOI. This metadata follows the metadata schemes provided by registration agencies such as the [CrossRef Metadata Schema](https://www.crossref.org/documentation/schema-library/) and the [DataCite Metadata Schema](https://schema.datacite.org/). 
+Most importantly, domain-independent [metadata](/docs/metadata) also including [provenance information](/docs/provenance) is attached to the DOI. This metadata follows the metadata schemes provided by registration agencies such as the [CrossRef Metadata Schema](https://www.crossref.org/documentation/schema-library/) and the [DataCite Metadata Schema](https://schema.datacite.org/).
 :::
 
 Registrants are [liable](https://support.datacite.org/docs/doi-registration-policy) to update the URL connected to the DOI if the object is moved.
 
 ## ORCID iDs
 
-<img align="left" src={useBaseUrl("/img/topics/ORCIDiD_iconvector.svg")} width="80" alt="ORCiD logo" vspace="30" hspace="20" />
+<img
+    align="left"
+    src={useBaseUrl("/img/topics/ORCIDiD_iconvector.svg")}
+    width="80"
+    alt="ORCiD logo"
+    vspace="30"
+    hspace="20"
+/>
 
 [ORCID iDs](https://orchid.org/) are open and non-proprietary PIDs for authors also described as unique author identifiers and can be retrieved and used by any author free of charge. They are provided by the non-profit organization ORCID Inc., formerly called Open Research and Contributors ID organisation, and sustained by fees of member organisations, providing extended application program interfaces (API) for their members to integrate ORCID services.
 
@@ -49,25 +76,46 @@ In addition to ORCID iDs as non-proprietary PIDs for authors, there are also pro
 
 ## Resarch Organisation Registry
 
-<img align="left" src={useBaseUrl('/img/topics/ROR_logo.svg')} width="80" alt="ROR logo CC BY 4.0" vspace="30" hspace="20" />
+<img
+    align="left"
+    src={useBaseUrl("/img/topics/ROR_logo.svg")}
+    width="80"
+    alt="ROR logo CC BY 4.0"
+    vspace="30"
+    hspace="20"
+/>
 
-The Research Organisation Registry ([ROR](https://ror.org/)) provides persistent identifiers for research organisations, while names might not be unique, may change and organisations might be merged, split, shut down or re-emerge. ROR enables to connect research organisations to research outputs and their researchers by identifying their affiliations. 
+The Research Organisation Registry ([ROR](https://ror.org/)) provides persistent identifiers for research organisations, while names might not be unique, may change and organisations might be merged, split, shut down or re-emerge. ROR enables to connect research organisations to research outputs and their researchers by identifying their affiliations.
 
-ROR should be provided in affiliations of researchers in scientific publications as well as for data publications. 
+ROR should be provided in affiliations of researchers in scientific publications as well as for data publications.
 
 ROR does support parent-child hierarchies as well as lateral relationships between organisations. An example might include a university having a child organisation such as a research institute [German: Fakultät] and related organisations such as a university hospital. However, ROR focuses on fundamental affiliations and is not focused on all subdivisions of an organisations such as departments [German: Institut] as high-level institutional information is more stable.
 
 ## ePICs
 
-<img align="left" src={useBaseUrl("/img/topics/ePIC-head.png")} width="200" alt="ePIC Header logo" vspace="12" hspace="20" />
+<img
+    align="left"
+    src={useBaseUrl("/img/topics/ePIC-head.png")}
+    width="200"
+    alt="ePIC Header logo"
+    vspace="12"
+    hspace="20"
+/>
 
-The Persistent Identifier for eResearch ([ePICs](https://www.pidconsortium.net/)) are based on the [Handle.Net Registry (HNR)](https://www.handle.net/) and are intended to be used for unpublished digital research objects. To this end, ePICs can be assigned at early stages of research to locate research data and may be used by various research data management or archiving systems. Upon publication of a dataset, the full research data can be linked via the ePIC, for example, in cases that include proprietary or sensitive information. 
+The Persistent Identifier for eResearch ([ePICs](https://www.pidconsortium.net/)) are based on the [Handle.Net Registry (HNR)](https://www.handle.net/) and are intended to be used for unpublished digital research objects. To this end, ePICs can be assigned at early stages of research to locate research data and may be used by various research data management or archiving systems. Upon publication of a dataset, the full research data can be linked via the ePIC, for example, in cases that include proprietary or sensitive information.
 
 This type of PID will commonly lead to a landing page, the content of which is maintained by the PID owner and includes the dataset's metadata or a method of contacting those responsible for the dataset.
 
 ## ARK
 
-<img align="left" src={useBaseUrl("/img/topics/arka-logo.png")} width="200" alt="ePIC Header logo" vspace="12" hspace="20" />
+<img
+    align="left"
+    src={useBaseUrl("/img/topics/arka_logo.png")}
+    width="200"
+    alt="ePIC Header logo"
+    vspace="12"
+    hspace="20"
+/>
 
 The Archival Research Key ([ARK](https://arks.org/about/ark-overview/)) are open identifiers hich are assigned to physical and digital information objects, mostly in the cultural studies.
 ARK prefixes are centrally assigned on request by the ARK Alliance and can be resolved centrally on ...
@@ -78,11 +126,12 @@ Much [software](https://arks.org/resources/) is available to mint, store, resolv
 
 ## Sources and further information
 
-- English: [DOI Basics - DataCite](https://support.datacite.org/docs/doi-basics)
-- German: [Persistent Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/persistent-identifiers-pids/)
-- German: [Digital Object Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/digital-object-identifiers-dois/)
-- German: [Open Research and Contributor ID (ORICD iD) - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/open-researcher-and-contributor-id-orcid-id/)
-- English: [ePIC FAQs - PID Consortium](https://www.pidconsortium.net/?page_id=1060)
+-   English: [DOI Basics - DataCite](https://support.datacite.org/docs/doi-basics)
+-   German: [Persistent Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/persistent-identifiers-pids/)
+-   German: [Digital Object Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/digital-object-identifiers-dois/)
+-   German: [Open Research and Contributor ID (ORICD iD) - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/open-researcher-and-contributor-id-orcid-id/)
+-   English: [ePIC FAQs - PID Consortium](https://www.pidconsortium.net/?page_id=1060)
 
-----
+---
+
 Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
