--- a/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
@@ -32,6 +32,8 @@ Chemotion ELN provides a dedicated functionality that facilitates the [publicati
 <br/>
 <br/>
 
+{/* COMMENT Theo: Would this be the right place to say something on the "supporting information" - support? This SI-by-a-mouseclick is one of the features I always mention.  */}
+
 
 <img
     alt="chemotion icon for experiment in data lifecacle"
