--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -158,6 +158,7 @@ A short introduction to the Chemotion ELN as well as the connection to the Chemo
 Chemotion ELN and its functionalities are described in various publications (see [below](#sources)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/docs). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
 
 {/* COMMENT (Fabian): Sentence below still relevant with the new "getting started" guide? */}
+{/* COMMENT (Nikki): I had the same though - but since the link used in the sentence below isn't used elsewehre, we can just leave it in?*/}
 
 NFDI4Chem offers hands-on workshop and Q&A sessions for Chemotion ELN and the LabIMotion extension. Visit the [workshop overview page](https://www.nfdi4chem.de/workshops/) for more information.
 
