add: info on autogen SI (first draft)

--- a/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
@@ -32,9 +32,6 @@ Chemotion ELN provides a dedicated functionality that facilitates the [publicati
 <br/>
 <br/>
 
-{/* COMMENT Theo: Would this be the right place to say something on the "supporting information" - support? This SI-by-a-mouseclick is one of the features I always mention.  */}
-
-
 <img
     alt="chemotion icon for experiment in data lifecacle"
     src={useBaseUrl("/img/nmrXiv.svg")}
@@ -45,5 +42,4 @@ Chemotion ELN provides a dedicated functionality that facilitates the [publicati
 />
 Furthermore, Chemotion ELN is connected to other repositories such as [*nmrXiv*](https://nmrxiv.org/) to ensure optimal visibility and facilitate user-friendly searches for original research data. The NFDI4Chem team is actively working on establishing connections to additional repositories, particularly those [supported and recommended by NFDI4Chem](/docs/choose_repository/). This ongoing effort aims to enhance accessibility and interoperability within the research community.
 
-
-
+Chemotion ELN also provides researchers with the option to automatically generate supplemental information (SI) for their manuscripts. This includes direct references to the published datasets via their DOI.
