add: intro sentence data re-use

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -24,20 +24,26 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ## Data Life Cycle Support
 
-{/* Placeholder
 
-### Data Reuse
 
-{" "}
+### Data Re-Use
 
 <img
-    alt="chemotion icon for data reuse"
+    alt="chemotion icon for experiment in data lifecacle"
     src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_reuse.png")}
     width="150"
     align="left"
     vspace="0"
     hspace="40"
-/> What about planning in terms of importing data from repositories --> reuse [Find
+/>
+
+When starting a new project, determine which data you may want to re-use. If you have been using Chemotion ELN in previous projects, this is a good time to review what is already in the ELN and adjust access rights to previous work for new research group members. 
+
+<br />
+<br />
+
+{/* Placeholder
+What about planning in terms of importing data from repositories --> reuse [Find
 out more](/docs/chemotion_eln_dataReuse) */}
 
 ### Experiment Design
