modify: alt text

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -29,7 +29,7 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 ### Data Re-Use
 
 <img
-    alt="chemotion icon for experiment in data lifecacle"
+    alt="chemotion icon for reuse in data lifecycle"
     src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_reuse.png")}
     width="150"
     align="left"
