fix: typo in alternative text

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -49,7 +49,7 @@ out more](/docs/chemotion_eln_dataReuse) */}
 ### Experiment Design
 
 <img
-    alt="chemotion icon for experiment in data lifecacle"
+    alt="chemotion icon for experiment in data lifecycle"
     src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_DoE.png")}
     width="150"
     align="left"
@@ -64,7 +64,7 @@ Chemotion assists in experiment design and planning research by offering embedde
 ### Experiment
 
 <img
-    alt="chemotion icon for experiment in data lifecacle"
+    alt="chemotion icon for experiment in data lifecycle"
     src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_experiment.png")}
     width="150"
     align="left"
@@ -81,7 +81,7 @@ During experiments, Chemotion supports researchers with _automated calculations_
 ### Data Collection and Processing
 
 <img
-    alt="chemotion icon for experiment in data lifecacle"
+    alt="chemotion icon for experiment in data lifecycle"
     src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_dataCollection_Processing.png")}
     width="150"
     align="left"
@@ -96,7 +96,7 @@ For seamless workflows, _analytical devices_ can be connected and directly acces
 ### Analysis
 
 <img
-    alt="chemotion icon for experiment in data lifecacle"
+    alt="chemotion icon for experiment in data lifecycle"
     src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_analysis.png")}
     width="150"
     align="left"
@@ -113,7 +113,7 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 ### Data Publication
 
 <img
-    alt="chemotion icon for experiment in data lifecacle"
+    alt="chemotion icon for experiment in data lifecycle"
     src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_dataPublication.png")}
     width="150"
     align="left"
