feat: replace chemotion icons with svg, improve layout

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -27,24 +27,32 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 ### Data Re-Use {#reuse}
 
 <img
-    alt="chemotion icon for reuse in data lifecycle"
-    src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_reuse.png")}
-    width="150"
-    align="left"
-    vspace="0"
-    hspace="40"
-/> What about planning in terms of importing data from repositories --> reuse [Find
+	alt="chemotion icon for reuse in data lifecycle"
+	src={useBaseUrl(
+		"/img/smartlab/chemotion/chemotion_icons/chemotion_reuse.svg",
+	)}
+	width="120"
+	align="right"
+	vspace="0"
+	hspace="40"
+/>
+
+What about planning in terms of importing data from repositories --> reuse
+
+[Find
 out more](/docs/chemotion_eln_dataReuse)
+
+<br />
 
 ### Experiment Design {#experiment_design}
 
 <img
 	alt="chemotion icon for experiment in data lifecacle"
 	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_DoE.png",
+		"/img/smartlab/chemotion/chemotion_icons/chemotion_DoE.svg",
 	)}
-	width="150"
-	align="left"
+	width="120"
+	align="right"
 	vspace="0"
 	hspace="40"
 />
@@ -53,15 +61,17 @@ Chemotion assists in experiment design and planning research by offering embedde
 
 [Find out more](/docs/chemotion_eln_experimentDesign)
 
+<br />
+
 ### Experiment {#experiment}
 
 <img
 	alt="chemotion icon for experiment in data lifecacle"
 	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_experiment.png",
+		"/img/smartlab/chemotion/chemotion_icons/chemotion_experiment.svg",
 	)}
-	width="150"
-	align="left"
+	width="120"
+	align="right"
 	vspace="0"
 	hspace="40"
 />
@@ -77,10 +87,10 @@ During experiments, Chemotion supports researchers with _automated calculations_
 <img
 	alt="chemotion icon for experiment in data lifecacle"
 	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_dataCollection_Processing.png",
+		"/img/smartlab/chemotion/chemotion_icons/chemotion_dataCollection_Processing.svg",
 	)}
-	width="150"
-	align="left"
+	width="120"
+	align="right"
 	vspace="0"
 	hspace="40"
 />
@@ -89,15 +99,17 @@ For seamless workflows, _analytical devices_ can be connected and directly acces
 
 [Find out more](/docs/chemotion_eln_dataCollection)
 
+<br />
+
 ### Analysis {#analysis}
 
 <img
 	alt="chemotion icon for experiment in data lifecacle"
 	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_analysis.png",
+		"/img/smartlab/chemotion/chemotion_icons/chemotion_analysis.svg",
 	)}
-	width="150"
-	align="left"
+	width="120"
+	align="right"
 	vspace="0"
 	hspace="40"
 />
@@ -113,10 +125,10 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 <img
 	alt="chemotion icon for experiment in data lifecacle"
 	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_dataPublication.png",
+		"/img/smartlab/chemotion/chemotion_icons/chemotion_dataPublication.svg",
 	)}
-	width="150"
-	align="left"
+	width="120"
+	align="right"
 	vspace="0"
 	hspace="40"
 />
