feat: add ChemotionIcon component for consistent icon rendering

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -7,7 +7,10 @@ id: "chemotion_eln"
 import VideoPrivacy from "video-privacy";
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
+import ChemotionIcon from "@site/src/components/chemotion/ChemotionIcon";
+
 import ChemotionLifecycle from "@site/src/components/chemotion/ChemotionLifecycle";
+
 
 # Chemotion ELN
 
@@ -26,116 +29,82 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ### Data Re-Use {#reuse}
 
-<img
+<ChemotionIcon
+	url="/img/smartlab/chemotion/chemotion_icons/chemotion_reuse.svg"
 	alt="chemotion icon for reuse in data lifecycle"
-	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_reuse.svg",
-	)}
-	width="120"
-	align="right"
-	vspace="0"
-	hspace="40"
 />
 
 What about planning in terms of importing data from repositories --> reuse
 
-[Find
-out more](/docs/chemotion_eln_dataReuse)
+[Find out more](/docs/chemotion_eln_dataReuse) | [Back to top](#top)
 
 <br />
 
 ### Experiment Design {#experiment_design}
 
-<img
-	alt="chemotion icon for experiment in data lifecacle"
-	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_DoE.svg",
-	)}
-	width="120"
-	align="right"
-	vspace="0"
-	hspace="40"
+<ChemotionIcon
+	url="/img/smartlab/chemotion/chemotion_icons/chemotion_DoE.svg"
+	alt="chemotion icon for experiment design in data lifecycle"
 />
+
 
 Chemotion assists in experiment design and planning research by offering embedded _structure editors_, reading and generating _chemical identifiers_, and pulling information from relevant _databases_.
 
-[Find out more](/docs/chemotion_eln_experimentDesign)
+[Find out more](/docs/chemotion_eln_experimentDesign) | [Back to top](#top)
+
 
 <br />
 
 ### Experiment {#experiment}
 
-<img
-	alt="chemotion icon for experiment in data lifecacle"
-	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_experiment.svg",
-	)}
-	width="120"
-	align="right"
-	vspace="0"
-	hspace="40"
+
+<ChemotionIcon
+	url="/img/smartlab/chemotion/chemotion_icons/chemotion_experiment.svg"
+	alt="chemotion icon for experiment in data lifecycle"
 />
 
 During experiments, Chemotion supports researchers with _automated calculations_, _structured documentation_, and a _concise overview_ of experimental information.
 
-[Find out more](/docs/chemotion_eln_experiment)
+[Find out more](/docs/chemotion_eln_experiment) | [Back to top](#top)
 
 <br />
 
 ### Data Collection and Processing {#collection_processing}
 
-<img
-	alt="chemotion icon for experiment in data lifecacle"
-	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_dataCollection_Processing.svg",
-	)}
-	width="120"
-	align="right"
-	vspace="0"
-	hspace="40"
+<ChemotionIcon
+	url="/img/smartlab/chemotion/chemotion_icons/chemotion_dataCollection_Processing.svg"
+	alt="chemotion icon for data collection and processing in data lifecycle"
 />
 
 For seamless workflows, _analytical devices_ can be connected and directly accessed within the Chemotion ELN. Besides this connection, data from these devices can be automatically transferred, file formats are converted, and metadata is mapped.
 
-[Find out more](/docs/chemotion_eln_dataCollection)
+[Find out more](/docs/chemotion_eln_dataCollection) | [Back to top](#top)
 
 <br />
 
 ### Analysis {#analysis}
 
-<img
-	alt="chemotion icon for experiment in data lifecacle"
-	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_analysis.svg",
-	)}
-	width="120"
-	align="right"
-	vspace="0"
-	hspace="40"
+<ChemotionIcon
+	url="/img/smartlab/chemotion/chemotion_icons/chemotion_analysis.svg"
+	alt="chemotion icon for analysis in data lifecycle"
 />
 
 Analyses can be performed directly in the Chemotion ELN by utilizing one of the embedded _spectra editors_.
 
-[Find out more](/docs/chemotion_eln_analysis)
+[Find out more](/docs/chemotion_eln_analysis) | [Back to top](#top)
 
 <br />
 
 ### Data Publication {#publication}
 
-<img
-	alt="chemotion icon for experiment in data lifecacle"
-	src={useBaseUrl(
-		"/img/smartlab/chemotion/chemotion_icons/chemotion_dataPublication.svg",
-	)}
-	width="120"
-	align="right"
-	vspace="0"
-	hspace="40"
+<ChemotionIcon
+	url="/img/smartlab/chemotion/chemotion_icons/chemotion_dataPublication.svg"
+	alt="chemotion icon for data publication in data lifecycle"
 />
 
 The Chemotion ELN is connected to several _data repositories_. Incorperated publishing workflows allow for simple and fast publication of research data.
 
-[Find out more](/docs/chemotion_eln_dataPublication)
+[Find out more](/docs/chemotion_eln_dataPublication) | [Back to top](#top)
 
 <br />
 
